# percepxion-MCP-Server

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  percepxion_mcp.py  pyproject.toml  requirements.txt
config/: claude_desktop_config.example.json  claude_desktop_config.wsl_windows.example.json
docs/: SETUP.md  TOOLS.md  adding-new-tools.md  claude-example.prompt  tools.md
src/percepxion_mcp/: server.py
