[project]
name = "percepxion-mcp-server"
version = "0.1.0"
description = "FastMCP server exposing Percepxion APIs as MCP tools"
requires-python = ">=3.11"
dependencies = [
  "fastmcp",
  "requests",
  "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
